tests/baselines/reference/propertyAndFunctionWithSameName.errors.txt
==== tests/cases/compiler/propertyAndFunctionWithSameName.ts (2 errors) ====
    class C {
        x: number;
        x() { // error
        ~~~~~~~~~~~~~~
            return 1;
    ~~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS2000: Duplicate identifier 'x'.
    }
    
    class D {
        x: number;
        x(v) { } // error
        ~~~~~~~~
!!! error TS2000: Duplicate identifier 'x'.
    }